AB#213784: parent page header spacing fixes

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
@@ -61,7 +61,7 @@
     font-family: variable(secondary-font);
     color: clr(primary);
     text-align: center;
-    margin: 5.5rem auto 0 auto;
+    margin: 0 auto;
 
     @include small {
       font-size: 1.8rem;
@@ -129,7 +129,7 @@
     }
 
     .horizontal-img__inner {
-      margin: 4rem auto;
+      margin: 4.5rem auto;
     }
 
     @include medium {
@@ -138,7 +138,7 @@
 
       .eyebrow {
         margin-top: 6.8rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
       }
     }
 
@@ -147,7 +147,7 @@
       max-height: 58.0rem;
 
       .horizontal-img__inner {
-        margin: 5rem auto;
+        margin: 4.5rem auto;
       }
     }
   }
